Fri Mar 11 14:51:54 GMT  2016  Lee Noar  <leenoar@sky.com>

	* sys/_cpucaps.s: New file. Provide functions to probe the
	OS for details of the CPU (currently SWP, LDREX/STREX
	availability).
	* Makefile.am: Add above file.
	* include/unixlib/local.h: Add declarations for user facing
	functions provided above.
	* incl-local/internal/asm_dec.s(__ul_global): Add entry to
	record CPU flags.
	* incl-local/internal/unix.h: Likewise.
	* pthread/_ints.s(__pthread_disable_ints,__pthread_protect_unsafe):
	Use CPU flags to determine whether to use the SWP instruction or
	LRDEX/STREX.
	* sys/_syslib.s(__main): Add call to __probe_cpu_caps.
	(__unixlib_fatal): Use CPU flags to determine whether to use the
	SWP instruction or LRDEX/STREX.

Mon Feb  7 15:06:02 GMT  2016  Lee Noar  <leenoar@sky.com>

	* incl-local/internal/asm_dec.s(XSOM_DeregisterClient): Add
	to list of SWIs.
	* sys/_syslib.s: Make sure that if a custom stack size is used,
	that the wimpslot is big enough. The main test uses unsigned
	integers because we are dealing with 32bit addresses, but this
	doesn't catch the problem of a large stack chunk in a small
	wimpslot producing an address below 0. Add an additional check
	on a subtraction where we know that a negative result is a bogus
	address.
	(__exit_with_error_num): In the event of a serious error early
	on in the initialisation stage, deregister the client from the
	Shared Object Manager.

Mon Nov 23 17:12:58 GMT  2015  Lee Noar  <leenoar@sky.com>

	* include/setjmp.h: Fix for memory corruption when mixing
	VFP and non-VFP shared libraries at runtime. If a VFP program
	uses a non-VFP library that calls setjmp, the setjmp buffer
	will be too small and setjmp() will overwrite anything that
	follows it.
	Fix by making the buffer for setjmp the same size for both.

Sat Sep 12 17:55:18 BST  2015  Lee Noar  <leenoar@sky.com>

	* stdlib/atexit.c: Make SCL friendly when building for SCL.
	For UnixLib nothing has changed. For SCL, don't compile