@@ -1,3 +1,9 @@
+Thu May  5 19:37:26 BST  2016  Lee Noar  <leenoar@sky.com>
+
+	* pthread/_ints.s(__pthread_protect_unsafe): Make the LDREX/STREX
+	code a closer match in functionality to the SWP code. Hopefully,
+	this will fix stability issues when using pthreads on the RPi3.
+
 Fri Mar 11 14:51:54 GMT  2016  Lee Noar  <leenoar@sky.com>
 
 	* sys/_cpucaps.s: New file. Provide functions to probe the
